--- a/OpenEdXMobile/res/values-ja/labels.xml
+++ b/OpenEdXMobile/res/values-ja/labels.xml
@@ -33,9 +33,19 @@
   <string name="label_rate_the_app">アプリを評価する</string>
   <!--Alert dialog and snackbar button for opening an app store to update the app to the latest version-->
   <string name="label_update">アップデート</string>
+  <!--Alert dialog Don't allow button-->
+  <string name="label_do_not_allow">許可しない</string>
+  <!--Alert dialog View Event button-->
+  <string name="label_view_events">イベントを見る</string>
+  <!--Alert dialog Update now button-->
+  <string name="label_update_now">今すぐ更新</string>
+  <!--Alert dialog Remove button-->
   <!--Done button label-->
   <string name="label_done">完了</string>
   <!--Undo button label-->
   <string name="label_undo">元に戻す</string>
   <!--Label denoting an error-->
+  <string name="label_error">エラー</string>
+  <!--Customer support text, using as button title for disabled user-->
+  <string name="label_customer_support">カスタマーサポート</string>
 </resources>
