--- a/OpenEdXMobile/res/values-pt-rBR/labels.xml
+++ b/OpenEdXMobile/res/values-pt-rBR/labels.xml
@@ -33,10 +33,19 @@
   <string name="label_rate_the_app">Avaliar o app</string>
   <!--Alert dialog and snackbar button for opening an app store to update the app to the latest version-->
   <string name="label_update">Atualizar</string>
+  <!--Alert dialog Don't allow button-->
+  <string name="label_do_not_allow">Não permitir</string>
+  <!--Alert dialog View Event button-->
+  <string name="label_view_events">Ver eventos</string>
+  <!--Alert dialog Update now button-->
+  <string name="label_update_now">Atualizar agora</string>
+  <!--Alert dialog Remove button-->
   <!--Done button label-->
   <string name="label_done">Concluído</string>
   <!--Undo button label-->
   <string name="label_undo">Desfazer</string>
   <!--Label denoting an error-->
   <string name="label_error">Erro</string>
+  <!--Customer support text, using as button title for disabled user-->
+  <string name="label_customer_support">Suporte</string>
 </resources>
