--- a/OpenEdXMobile/res/values-de-rDE/errors.xml
+++ b/OpenEdXMobile/res/values-de-rDE/errors.xml
@@ -43,7 +43,12 @@
   <string name="error_account_not_linked_desc_google">Stellen Sie sicher, dass Ihr Google-Konto mit Ihrem {platform_name} Benutzerkonto  auf {platform_destination} verbunden ist.</string>
   <!--Content of alert shown during login when user attempts login via Google without having linked their account-->
   <string name="error_account_not_linked_desc_google_2">Das Google-Konto ist nicht mit dem {platform_name} Benutzerkonto verbunden. Bitte registrieren Sie sich.</string>
-
+  <!--Title of alert shown during login when user attempts login via Google without having linked their account-->
+  <string name="error_account_not_linked_title_microsoft">Microsoft-Konto ist nicht mit dem Konto {platform_name} verknüpft</string>
+  <!--Content of alert shown during login when user attempts login via Google without having linked their account-->
+  <string name="error_account_not_linked_desc_microsoft">Stelle bitte sicher, dass dein Microsoft Konto {platform_name} dem verknüpft {platform_destination} ist. </string>
+  <!--Content of alert shown during login when user attempts login via Microsoft without having linked their account-->
+  <string name="error_account_not_linked_desc_microsoft_2">Dieses Microsoft Konto wurde nicht mit {platform_name} verknüpft.  Bitte registieren. </string>
   <!--New version available-->
   <!--Snackbar notification shown when the current version of the app is unsupported-->
   <string name="app_version_unsupported">Ihre Version der App wird nicht weiter unterstützt.</string>
@@ -58,6 +63,7 @@
   <!--Error prompt shown during registration to indicate an empty field. Argument is a field name-->
   <string name="error_enter_field">Bitte geben sie ihr %1$s ein.</string>
   <!--Error prompt shown during registration to indicate a field invalid input. Argument is a field name-->
+  <string name="error_select_or_enter_field">Bitte wähle oder füge eine gültige %1$s ein.</string>
   <!--Error prompt shown during registration when a field entry is too short. Arguments are 1) a field name, 2) a number-->
   <string name="error_min_length">%1$s muss mindestens %2$d Zeichen haben.</string>
   <!--Error prompt shown during registration when a field entry is too long. Arguments are 1) a field name, 2) a number-->
@@ -75,4 +81,6 @@
   <!--Permission Error Messages-->
   <!--Error message shown when a permission is not granted-->
   <string name="permission_not_granted">Zugriff nicht möglich</string>
+  <!--This error message will be shown if user tried to login with third party (facebook/google) and server returns 403 status code, Disabled user-->
+  <string name="auth_provider_disabled_user_error">Ihr Benutzerkonto ist deaktiviert. Bitte kontaktieren Sie den Kundendienst. </string>
 </resources>
