--- a/OpenEdXMobile/res/values-de-rDE/profile_strings.xml
+++ b/OpenEdXMobile/res/values-de-rDE/profile_strings.xml
@@ -5,6 +5,36 @@
     <string name="settings_wifi_top">Download nur über Wi-Fi</string>
     <!-- Label explaining what wifi only means in detail -->
     <string name="settings_wifi_bottom">Nur herunterladen, wenn WiFi aktiviert ist</string>
+    <!-- Text to clarify that around what is visible -->
+    <string name="profile_visibility_off_message">Ihre Profilinformationen sind nur für Sie sichtbar. Nur Ihr Benutzername ist für andere auf {platform_name} sichtbar.</string>
+
+    <!--  String for Profile Screen  -->
+    <!--  Heading of Wifi Field  -->
+    <string name="label_wifi">WLAN</string>
+    <!--  Heading of Personal Information  -->
+    <string name="label_personal_information">Persönliche Informationen</string>
+    <!--  Heading of Help Field  -->
+    <string name="label_help">Hilfe</string>
+    <!--  Description of Submit feedback Field  -->
+    <string name="description_submit_feedback">Möchten Sie eine Funktionsanfrage stellen oder uns Feedback zu unserer App geben?</string>
+    <!--  Label of Submit feedback Button  -->
+    <string name="label_submit_feedback_btn">E-Mail an das Support-Team senden</string>
+    <!--  Heading of Get Support Field  -->
+    <string name="title_get_support">Unterstützung holen</string>
+    <!--  Description of Get Support Field  -->
+    <string name="description_get_support">Um weitere Hilfe zu erhalten und zu erfahren, wie Sie die mobile App {platform_name} verwenden, besuchen Sie unsere häufig gestellten Fragen.</string>
+    <!--  Label of Get Support Button  -->
+    <string name="label_view_faq_btn">Häufig gestellte Fragen anzeigen</string>
+    <!--  Label of Sign out Button  -->
+    <string name="label_sign_out_btn">Abmelden</string>
+    <!-- Delete my account screen Title -->
+    <string name="title_delete_my_account">Konto löschen</string>
+    <!--  Label of Delete Account Button  -->
+    <string name="label_delete_account_btn">Konto löschen</string>
+    <!--  Description of Delete Account  -->
+    <string name="description_delete_account">Befolgen Sie die Anweisungen auf dem nächsten Bildschirm, um Ihr Konto und alle zugehörigen Daten zu löschen.</string>
+    <!--  Label of App Version  -->
+    <string name="label_app_version">Version</string>
 
     <!-- Logout button label -->
     <string name="logout">Abmelden</string>
@@ -14,6 +44,8 @@
     <!-- User Profiles -->
     <!-- Window title for the user profile screen -->
     <string name="profile_title">Profil</string>
+    <!-- The accessibility description for the email section -->
+    <string name="profile_email_description">E-Mail: {email}</string>
     <!-- The accessibility description for the username section -->
     <string name="profile_username_description">Benutzername: {username}</string>
     <!-- The accessibility description for the language section -->
