--- a/OpenEdXMobile/res/values-de-rDE/video_strings.xml
+++ b/OpenEdXMobile/res/values-de-rDE/video_strings.xml
@@ -1,5 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+    <!-- Button text to show user Video Settings screen -->
+    <string name="label_video_settings">Videoeinstellungen</string>
+    <!-- Title of Video Quality Dialog -->
+    <string name="video_download_quality_title">Video-Download-Qualität</string>
+    <!-- Auto Video Quality option -->
+    <string name="auto_recommended_text">Automatisch (Empfohlen)</string>
+    <!-- 360p Video Quality option -->
+    <string name="video_quality_p360">360p (Kleinste Dateigröße)</string>
+    <!-- 540p Video Quality option -->
+    <string name="video_quality_p540">540p</string>
+    <!-- 720p Video Quality option -->
+    <string name="video_quality_p720">720p (Beste Qualität)</string>
+    <!-- Message shows in Video Quality dialog -->
+    <string name="video_download_quality_message">Diese Einstellung gilt für alle Video-Downloads in der {platform_name}-App.</string>
+
     <!-- Label for the Download to sd-card setting -->
     <string name="settings_download_to_sdcard_title">Video auf die SD Karte speichern</string>
     <!-- Label explaining the download location setting in detail -->
@@ -39,5 +54,16 @@
     <plurals name="delete_video_snackbar_msg">
         <item quantity="one">%s Video gelöscht</item>
         <item quantity="other">%s Videos gelöscht</item>
+    </plurals>
+
+    <!-- Subtitle labels for video durations in hours-->
+    <plurals name="video_duration_hour">
+        <item quantity="one">%d Stunde</item>
+        <item quantity="other">%d Stunden</item>
+    </plurals>
+    <!-- Subtitle labels for video durations in minutes-->
+    <plurals name="video_duration_minutes">
+        <item quantity="one">%d Min</item>
+        <item quantity="other">%d Min</item>
     </plurals>
 </resources>
