--- a/OpenEdXMobile/res/values-fr/errors.xml
+++ b/OpenEdXMobile/res/values-fr/errors.xml
@@ -49,7 +49,6 @@
   <string name="error_account_not_linked_desc_microsoft">Vérifiez que votre compte Microsoft est associé à votre compte {platform_name} sur {platform_destination}</string>
   <!--Content of alert shown during login when user attempts login via Microsoft without having linked their account-->
   <string name="error_account_not_linked_desc_microsoft_2">Ce compte Microsoft n\'est lié à aucun compte {platform_name}. Veuillez vous inscrire.</string>
-
   <!--New version available-->
   <!--Snackbar notification shown when the current version of the app is unsupported-->
   <string name="app_version_unsupported">Votre version n\'est plus prise en charge.</string>
@@ -82,4 +81,6 @@
   <!--Permission Error Messages-->
   <!--Error message shown when a permission is not granted-->
   <string name="permission_not_granted">Permission non accordée</string>
+  <!--This error message will be shown if user tried to login with third party (facebook/google) and server returns 403 status code, Disabled user-->
+  <string name="auth_provider_disabled_user_error">Votre compte est désactivé. Contactez l\'assistance client pour obtenir de l\'aide.</string>
 </resources>
