--- a/OpenEdXMobile/res/values-fr/video_strings.xml
+++ b/OpenEdXMobile/res/values-fr/video_strings.xml
@@ -1,5 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+    <!-- Button text to show user Video Settings screen -->
+    <string name="label_video_settings">Paramètres vidéo</string>
+    <!-- Title of Video Quality Dialog -->
+    <string name="video_download_quality_title">Qualité de téléchargement vidéo</string>
+    <!-- Auto Video Quality option -->
+    <string name="auto_recommended_text">Auto (Recommandé)</string>
+    <!-- 360p Video Quality option -->
+    <string name="video_quality_p360">360p (plus petite taille de fichier)</string>
+    <!-- 540p Video Quality option -->
+    <string name="video_quality_p540">540p</string>
+    <!-- 720p Video Quality option -->
+    <string name="video_quality_p720">720p (Meilleure qualité)</string>
+    <!-- Message shows in Video Quality dialog -->
+    <string name="video_download_quality_message">Ce paramètre concerne tous les téléchargements vidéo dans l\'application {platform_name}.</string>
+
     <!-- Label for the Download to sd-card setting -->
     <string name="settings_download_to_sdcard_title">Télécharger la vidéo sur la carte SD</string>
     <!-- Label explaining the download location setting in detail -->
@@ -39,5 +54,16 @@
     <plurals name="delete_video_snackbar_msg">
         <item quantity="one">%s vidéo supprimée</item>
         <item quantity="other">%s vidéos supprimées</item>
+    </plurals>
+
+    <!-- Subtitle labels for video durations in hours-->
+    <plurals name="video_duration_hour">
+        <item quantity="one">%d heure</item>
+        <item quantity="other">%d heures</item>
+    </plurals>
+    <!-- Subtitle labels for video durations in minutes-->
+    <plurals name="video_duration_minutes">
+        <item quantity="one">%d min</item>
+        <item quantity="other">%d min</item>
     </plurals>
 </resources>
