--- a/OpenEdXMobile/res/values-iw/video_strings.xml
+++ b/OpenEdXMobile/res/values-iw/video_strings.xml
@@ -1,5 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+    <!-- Button text to show user Video Settings screen -->
+    <string name="label_video_settings">הגדרות וידיאו</string>
+    <!-- Title of Video Quality Dialog -->
+    <string name="video_download_quality_title">איכות הורדת וידאו</string>
+    <!-- Auto Video Quality option -->
+    <string name="auto_recommended_text">אוטומטי (מומלץ)</string>
+    <!-- 360p Video Quality option -->
+    <string name="video_quality_p360">360p (גודל הקובץ הקטן ביותר)</string>
+    <!-- 540p Video Quality option -->
+    <string name="video_quality_p540">540p</string>
+    <!-- 720p Video Quality option -->
+    <string name="video_quality_p720">720p (איכות מקסימלית)</string>
+    <!-- Message shows in Video Quality dialog -->
+    <string name="video_download_quality_message">הגדרה זו מיועדת לכל הורדות הווידאו באפליקציית {platform_name}.</string>
+
     <!-- Label for the Download to sd-card setting -->
     <string name="settings_download_to_sdcard_title">הורדת הסרטון אל כרטיס SD</string>
     <!-- Label explaining the download location setting in detail -->
@@ -16,6 +31,9 @@
     <string name="error_download_failed">ההורדה נכשלה</string>
     <!-- Confirmation message shown when attempting to download a large quantity of video data -->
     <string name="file_size_exceeded">גודל הקובץ להורדה גדול מהנפח הפנוי במכשיר. </string>
+    <!-- Confirmation message shown when attempting to download a large quantity of video data -->
+    <string name="download_exceed_message">הסרטונים שבחרת גדולים מ-1GB.
+האם אתה רוצה להוריד את סרטונים אלו?</string>
 
     <!-- Message shown when user attempts to download a video over cellular data,
     but has chosen to only allow video downloads over wifi -->
@@ -38,5 +56,20 @@
         <item quantity="two">%s קבצי וידאו נמחקו</item>
         <item quantity="many">%s קבצי וידאו נמחקו</item>
         <item quantity="other">%s קבצי וידאו נמחקו</item>
+    </plurals>
+
+    <!-- Subtitle labels for video durations in hours-->
+    <plurals name="video_duration_hour">
+        <item quantity="one">%d שָׁעָה</item>
+        <item quantity="two">%d 2 שעות</item>
+        <item quantity="many">%d שעה (ות</item>
+        <item quantity="other">%d שעה (ות</item>
+    </plurals>
+    <!-- Subtitle labels for video durations in minutes-->
+    <plurals name="video_duration_minutes">
+        <item quantity="one">%d 1מ</item>
+        <item quantity="two">%d 2 דקות</item>
+        <item quantity="many">%d דקות</item>
+        <item quantity="other">%d דקות</item>
     </plurals>
 </resources>
