--- a/OpenEdXMobile/res/values-ja/errors.xml
+++ b/OpenEdXMobile/res/values-ja/errors.xml
@@ -2,6 +2,16 @@
 <resources>
   <!--An error occurred but we don't know why-->
   <string name="error_unknown">不明なエラーが生じました。後ほど再試行してください。</string>
+  <!--Course related error messages-->
+  <!--Error shown when a course's content is invalid or not in the format that we expect-->
+  <string name="course_error_content_invalid">講座コンテンツを読み込めませんでした。後ほど再試行してください。</string>
+  <!--Title of alert shown when course enrollment request fails-->
+  <string name="enrollment_error_title">登録エラー</string>
+  <!--Error message shown in alert when course enrollment request fails-->
+  <string name="enrollment_error_message">本コースは、現在お使いの{platform_name}ではモバイルアプリで視聴できません。ブラウザから再度お試しください。</string>
+  <!--Error message shown when a course section is not available on mobile-->
+  <string name="not_available_on_mobile">モバイル端末では利用できません。</string>
+  <!--Network error messages-->
   <!--Error shown when  user attempts an action but needs an internet connection-->
   <string name="network_not_connected">インターネットに接続されていません。</string>
   <!--Concise error shown when user attempts an action but needs an internet connection-->
@@ -26,11 +36,19 @@
   <!--Content of alert shown during login when user attempts login via Facebook without having linked their account-->
   <string name="error_account_not_linked_desc_fb">あなたの Facebook アカウントが {platform_destination} 上の {platform_name} アカウントと連動しているか確認してください。</string>
   <!--Content of alert shown during login when user attempts login via Facebook without having linked their account-->
+  <string name="error_account_not_linked_desc_fb_2">Facebookアカウントが{platform_name} のアカウントと連携登録されていません。登録を行ってください。</string>
   <!--Title of alert shown during login when user attempts login via Google without having linked their account-->
   <string name="error_account_not_linked_title_google"> {platform_name} アカウントと連動していない Google アカウント</string>
   <!--Content of alert shown during login when user attempts login via Google without having linked their account-->
   <string name="error_account_not_linked_desc_google">あなたの Google アカウントが {platform_destination} 上の {platform_name} アカウントと連動しているか確認してください。</string>
-
+  <!--Content of alert shown during login when user attempts login via Google without having linked their account-->
+  <string name="error_account_not_linked_desc_google_2">Googleアカウントが{platform_name} のアカウントと連携登録されていません。登録を行ってください。</string>
+  <!--Title of alert shown during login when user attempts login via Google without having linked their account-->
+  <string name="error_account_not_linked_title_microsoft">Microsoftアカウントが{platform_name} 上のアカウントと連携登録されていません。登録を行ってください。</string>
+  <!--Content of alert shown during login when user attempts login via Google without having linked their account-->
+  <string name="error_account_not_linked_desc_microsoft">お使いのMicrosoftアカウントが{platform_destination}に存在する{platform_name} のアカウントと連携されているかご確認ください。</string>
+  <!--Content of alert shown during login when user attempts login via Microsoft without having linked their account-->
+  <string name="error_account_not_linked_desc_microsoft_2">Microsoftアカウントが{platform_name}上のアカウントと連携登録されていません。登録を行ってください。</string>
   <!--New version available-->
   <!--Snackbar notification shown when the current version of the app is unsupported-->
   <string name="app_version_unsupported">あなたが使っている本アプリのバージョンはサポートが終了しています。</string>
@@ -45,6 +63,7 @@
   <!--Error prompt shown during registration to indicate an empty field. Argument is a field name-->
   <string name="error_enter_field">%1$s を入力してください。</string>
   <!--Error prompt shown during registration to indicate a field invalid input. Argument is a field name-->
+  <string name="error_select_or_enter_field">有効な%1$sを選択するか、入力してください。</string>
   <!--Error prompt shown during registration when a field entry is too short. Arguments are 1) a field name, 2) a number-->
   <string name="error_min_length">%1$s は少なくとも %2$d 文字必要です。</string>
   <!--Error prompt shown during registration when a field entry is too long. Arguments are 1) a field name, 2) a number-->
@@ -52,6 +71,7 @@
   <!--Error message shown when a course hasn't started yet-->
   <string name="course_not_started">この講座はまだ開始していません。</string>
   <!--Error message shown when a user's access has expired for a course-->
+  <string name="course_access_expired">本コースへのアクセス可能期間が終了しています。</string>
   <!--Error message shown when a user can't perform an action on e.g. add a post/response/comment in forums-->
   <string name="action_not_completed">完了していません。</string>
   <!--Error dialog message shown when the user try to log in in app with un-supported version-->
@@ -60,4 +80,7 @@
   <string name="app_version_unsupported_register_msg">あなたが使っている本アプリのバージョンはサポートが終了しています。最新バージョンにアップデートして登録してください。</string>
   <!--Permission Error Messages-->
   <!--Error message shown when a permission is not granted-->
+  <string name="permission_not_granted">許可されていません。</string>
+  <!--This error message will be shown if user tried to login with third party (facebook/google) and server returns 403 status code, Disabled user-->
+  <string name="auth_provider_disabled_user_error">お使いのアカウントが無効化されています。カスタマーサポートへご連絡ください。</string>
 </resources>
