--- a/OpenEdXMobile/res/values-ja/profile_strings.xml
+++ b/OpenEdXMobile/res/values-ja/profile_strings.xml
@@ -5,6 +5,36 @@
     <string name="settings_wifi_top">Wi-Fi 使用ダウンロード</string>
     <!-- Label explaining what wifi only means in detail -->
     <string name="settings_wifi_bottom">Wi-Fi がオンになっているときだけダウンロード</string>
+    <!-- Text to clarify that around what is visible -->
+    <string name="profile_visibility_off_message">プロフィール情報はあなただけが閲覧できます。{platform_name}の他のユーザーにはあなたのユーザー名のみが表示されます。</string>
+
+    <!--  String for Profile Screen  -->
+    <!--  Heading of Wifi Field  -->
+    <string name="label_wifi">Wi-Fi</string>
+    <!--  Heading of Personal Information  -->
+    <string name="label_personal_information">個人情報</string>
+    <!--  Heading of Help Field  -->
+    <string name="label_help">ヘルプ</string>
+    <!--  Description of Submit feedback Field  -->
+    <string name="description_submit_feedback">機能リクエストまたはアプリのフィードバックを送信しませんか？</string>
+    <!--  Label of Submit feedback Button  -->
+    <string name="label_submit_feedback_btn">サポートチームにメールを送信</string>
+    <!--  Heading of Get Support Field  -->
+    <string name="title_get_support">サポートを利用</string>
+    <!--  Description of Get Support Field  -->
+    <string name="description_get_support">{platform_name}モバイルアプリのヘルプや使い方の詳細は、よくある質問をご覧ください。</string>
+    <!--  Label of Get Support Button  -->
+    <string name="label_view_faq_btn">よくある質問を見る</string>
+    <!--  Label of Sign out Button  -->
+    <string name="label_sign_out_btn">サインアウト</string>
+    <!-- Delete my account screen Title -->
+    <string name="title_delete_my_account">アカウントを削除</string>
+    <!--  Label of Delete Account Button  -->
+    <string name="label_delete_account_btn">アカウントを削除</string>
+    <!--  Description of Delete Account  -->
+    <string name="description_delete_account">次の画面の指示に従って、アカウントおよびすべての関連するデータを削除します。</string>
+    <!--  Label of App Version  -->
+    <string name="label_app_version">バージョン</string>
 
     <!-- Logout button label -->
     <string name="logout">ログアウト</string>
@@ -14,6 +44,8 @@
     <!-- User Profiles -->
     <!-- Window title for the user profile screen -->
     <string name="profile_title">プロフィール</string>
+    <!-- The accessibility description for the email section -->
+    <string name="profile_email_description">メールアドレス: {email}</string>
     <!-- The accessibility description for the username section -->
     <string name="profile_username_description">ユーザー名：{username}</string>
     <!-- The accessibility description for the language section -->
