--- a/OpenEdXMobile/res/values-pt-rBR/errors.xml
+++ b/OpenEdXMobile/res/values-pt-rBR/errors.xml
@@ -49,7 +49,6 @@
   <string name="error_account_not_linked_desc_microsoft">Certifique-se de que a sua conta Microsoft esteja associada com sua conta {platform_name}  no  {platform_destination}</string>
   <!--Content of alert shown during login when user attempts login via Microsoft without having linked their account-->
   <string name="error_account_not_linked_desc_microsoft_2">Esta conta Microsoft não está conectada com nenhuma conta {platform_name}. Por favor registre-se.</string>
-
   <!--New version available-->
   <!--Snackbar notification shown when the current version of the app is unsupported-->
   <string name="app_version_unsupported">Esta versão do app não é mais compatível.</string>
@@ -82,4 +81,6 @@
   <!--Permission Error Messages-->
   <!--Error message shown when a permission is not granted-->
   <string name="permission_not_granted">Permissão não concedida</string>
+  <!--This error message will be shown if user tried to login with third party (facebook/google) and server returns 403 status code, Disabled user-->
+  <string name="auth_provider_disabled_user_error">Sua conta está desativada. Entre em contato com o suporte para obter ajuda.</string>
 </resources>
