--- a/OpenEdXMobile/res/values-pt-rBR/video_strings.xml
+++ b/OpenEdXMobile/res/values-pt-rBR/video_strings.xml
@@ -1,5 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+    <!-- Button text to show user Video Settings screen -->
+    <string name="label_video_settings">Configurações de vídeo</string>
+    <!-- Title of Video Quality Dialog -->
+    <string name="video_download_quality_title">Qualidade do vídeo</string>
+    <!-- Auto Video Quality option -->
+    <string name="auto_recommended_text">Automática (Recomendado)</string>
+    <!-- 360p Video Quality option -->
+    <string name="video_quality_p360">360p (Menor tamanho de arquivo)</string>
+    <!-- 540p Video Quality option -->
+    <string name="video_quality_p540">540p</string>
+    <!-- 720p Video Quality option -->
+    <string name="video_quality_p720">720p (Melhor qualidade)</string>
+    <!-- Message shows in Video Quality dialog -->
+    <string name="video_download_quality_message">Esta configuração é para todos os vídeos baixados no aplicativo {platform_name}.</string>
+
     <!-- Label for the Download to sd-card setting -->
     <string name="settings_download_to_sdcard_title">Baixar o Vídeo para o Cartão SD</string>
     <!-- Label explaining the download location setting in detail -->
@@ -39,5 +54,16 @@
     <plurals name="delete_video_snackbar_msg">
         <item quantity="one">%s vídeo apagado</item>
         <item quantity="other">%s vídeos apagados</item>
+    </plurals>
+
+    <!-- Subtitle labels for video durations in hours-->
+    <plurals name="video_duration_hour">
+        <item quantity="one">%d hora</item>
+        <item quantity="other">%d horas</item>
+    </plurals>
+    <!-- Subtitle labels for video durations in minutes-->
+    <plurals name="video_duration_minutes">
+        <item quantity="one">%d min</item>
+        <item quantity="other">%d min</item>
     </plurals>
 </resources>
