--- a/OpenEdXMobile/res/values-tr/errors.xml
+++ b/OpenEdXMobile/res/values-tr/errors.xml
@@ -49,7 +49,6 @@
   <string name="error_account_not_linked_desc_microsoft">Microsoft hesabınızın {platform_destination} üzerindeki {platform_name} hesabınızla ilişkili olduğundan emin olun</string>
   <!--Content of alert shown during login when user attempts login via Microsoft without having linked their account-->
   <string name="error_account_not_linked_desc_microsoft_2">Bu Microsoft hesabı herhangi bir {platform_name} hesabıyla bağlantılı değil. Lütfen kaydolun.</string>
-
   <!--New version available-->
   <!--Snackbar notification shown when the current version of the app is unsupported-->
   <string name="app_version_unsupported">Uygulamanızın sürümü artık desteklenmiyor.</string>
@@ -82,4 +81,6 @@
   <!--Permission Error Messages-->
   <!--Error message shown when a permission is not granted-->
   <string name="permission_not_granted">İzin sağlanmadı</string>
+  <!--This error message will be shown if user tried to login with third party (facebook/google) and server returns 403 status code, Disabled user-->
+  <string name="auth_provider_disabled_user_error">Hesabınız devre dışı bırakıldı. Destek için lütfen müşteri hizmetleriyle iletişime geçin.</string>
 </resources>
