--- a/OpenEdXMobile/res/values-vi/errors.xml
+++ b/OpenEdXMobile/res/values-vi/errors.xml
@@ -10,6 +10,7 @@
   <!--Error message shown in alert when course enrollment request fails-->
   <string name="enrollment_error_message">Bạn không thể đăng ký khóa học bằng ứng dụng điện thoại {platform_name} ở thời điểm hiện tại. Vui lòng thử lại trên trình duyệt web.</string>
   <!--Error message shown when a course section is not available on mobile-->
+  <string name="not_available_on_mobile">Không khả dụng trên Di động</string>
   <!--Network error messages-->
   <!--Error shown when  user attempts an action but needs an internet connection-->
   <string name="network_not_connected">Bạn đang không có kết nối mạng.</string>
@@ -42,7 +43,12 @@
   <string name="error_account_not_linked_desc_google">Hãy chắc chắn rằng tài khoản Google của bạn đã liên kết với tài khoản {platform_name} trên {platform_destination}</string>
   <!--Content of alert shown during login when user attempts login via Google without having linked their account-->
   <string name="error_account_not_linked_desc_google_2">Tài khoản Google này chưa liên kết với bất kỳ tài khoản {platform_name} nào. Vui lòng đăng ký.</string>
-
+  <!--Title of alert shown during login when user attempts login via Google without having linked their account-->
+  <string name="error_account_not_linked_title_microsoft">Tài khoản Microsoft không được liên kết với tài khoản {platform_name}</string>
+  <!--Content of alert shown during login when user attempts login via Google without having linked their account-->
+  <string name="error_account_not_linked_desc_microsoft">Đảm bảo rằng tài khoản Microsoft của bạn được liên kết với tài khoản {platform_name} của bạn trên {platform_destination}</string>
+  <!--Content of alert shown during login when user attempts login via Microsoft without having linked their account-->
+  <string name="error_account_not_linked_desc_microsoft_2">Tài khoản Microsoft này không được liên kết với bất kỳ tài khoản {platform_name} nào. Vui lòng đăng ký.</string>
   <!--New version available-->
   <!--Snackbar notification shown when the current version of the app is unsupported-->
   <string name="app_version_unsupported">Phiên bản hiện tại của ứng dụng không còn được hỗ trợ.</string>
@@ -57,6 +63,7 @@
   <!--Error prompt shown during registration to indicate an empty field. Argument is a field name-->
   <string name="error_enter_field">Vui lòng nhập %1$s của bạn.</string>
   <!--Error prompt shown during registration to indicate a field invalid input. Argument is a field name-->
+  <string name="error_select_or_enter_field">Vui lòng chọn hoặc nhập %1$s hợp lệ.</string>
   <!--Error prompt shown during registration when a field entry is too short. Arguments are 1) a field name, 2) a number-->
   <string name="error_min_length">%1$s phải có ít nhất %2$d ký tự.</string>
   <!--Error prompt shown during registration when a field entry is too long. Arguments are 1) a field name, 2) a number-->
@@ -74,4 +81,6 @@
   <!--Permission Error Messages-->
   <!--Error message shown when a permission is not granted-->
   <string name="permission_not_granted">Không có quyền truy cập</string>
+  <!--This error message will be shown if user tried to login with third party (facebook/google) and server returns 403 status code, Disabled user-->
+  <string name="auth_provider_disabled_user_error">Tài khoản của bạn đã bị vô hiệu hóa. Vui lòng liên hệ với bộ phận hỗ trợ khách hàng để được hỗ trợ.</string>
 </resources>
