--- a/OpenEdXMobile/res/values-vi/labels.xml
+++ b/OpenEdXMobile/res/values-vi/labels.xml
@@ -33,10 +33,19 @@
   <string name="label_rate_the_app">Đánh giá ứng dụng</string>
   <!--Alert dialog and snackbar button for opening an app store to update the app to the latest version-->
   <string name="label_update">Cập nhật</string>
+  <!--Alert dialog Don't allow button-->
+  <string name="label_do_not_allow">Không cho phép</string>
+  <!--Alert dialog View Event button-->
+  <string name="label_view_events">Xem Sự kiện</string>
+  <!--Alert dialog Update now button-->
+  <string name="label_update_now">Cập nhật ngay</string>
+  <!--Alert dialog Remove button-->
   <!--Done button label-->
   <string name="label_done">Xong</string>
   <!--Undo button label-->
   <string name="label_undo">Quay lại</string>
   <!--Label denoting an error-->
   <string name="label_error">Lỗi</string>
+  <!--Customer support text, using as button title for disabled user-->
+  <string name="label_customer_support">Hỗ trợ khách hàng</string>
 </resources>
