--- a/OpenEdXMobile/res/values-zh/errors.xml
+++ b/OpenEdXMobile/res/values-zh/errors.xml
@@ -10,6 +10,7 @@
   <!--Error message shown in alert when course enrollment request fails-->
   <string name="enrollment_error_message">您无法通过{platform_name}客户端进行选课。请使用网页浏览器重试。</string>
   <!--Error message shown when a course section is not available on mobile-->
+  <string name="not_available_on_mobile">不支持移动端</string>
   <!--Network error messages-->
   <!--Error shown when  user attempts an action but needs an internet connection-->
   <string name="network_not_connected">未连接到网络</string>
@@ -42,7 +43,12 @@
   <string name="error_account_not_linked_desc_google">请确保您的Google账号与您{platform_destination}上的{platform_name}账号匹配。</string>
   <!--Content of alert shown during login when user attempts login via Google without having linked their account-->
   <string name="error_account_not_linked_desc_google_2">此Google账号尚未与任何{platform_name}账号相关联，请先注册。</string>
-
+  <!--Title of alert shown during login when user attempts login via Google without having linked their account-->
+  <string name="error_account_not_linked_title_microsoft">未与{platform_name}帐户关联的微软帐户</string>
+  <!--Content of alert shown during login when user attempts login via Google without having linked their account-->
+  <string name="error_account_not_linked_desc_microsoft">请确保您的微软账号与您{platform_destination}上的{platform_name}账号匹配。</string>
+  <!--Content of alert shown during login when user attempts login via Microsoft without having linked their account-->
+  <string name="error_account_not_linked_desc_microsoft_2">此微软账号尚未与任何{platform_name}账号相关联，请先注册。</string>
   <!--New version available-->
   <!--Snackbar notification shown when the current version of the app is unsupported-->
   <string name="app_version_unsupported">不支持您的新版本。</string>
@@ -57,6 +63,7 @@
   <!--Error prompt shown during registration to indicate an empty field. Argument is a field name-->
   <string name="error_enter_field">请输入您的%1$s。</string>
   <!--Error prompt shown during registration to indicate a field invalid input. Argument is a field name-->
+  <string name="error_select_or_enter_field">请选择或输入一个有效的%1$s。</string>
   <!--Error prompt shown during registration when a field entry is too short. Arguments are 1) a field name, 2) a number-->
   <string name="error_min_length">%1$s 至少包含 %2$d 个字符。</string>
   <!--Error prompt shown during registration when a field entry is too long. Arguments are 1) a field name, 2) a number-->
@@ -74,4 +81,6 @@
   <!--Permission Error Messages-->
   <!--Error message shown when a permission is not granted-->
   <string name="permission_not_granted">未授予许可</string>
+  <!--This error message will be shown if user tried to login with third party (facebook/google) and server returns 403 status code, Disabled user-->
+  <string name="auth_provider_disabled_user_error">您的账户已禁用。请联系客户支持寻求帮助。</string>
 </resources>
