--- a/OpenEdXMobile/res/values-zh/video_strings.xml
+++ b/OpenEdXMobile/res/values-zh/video_strings.xml
@@ -1,5 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+    <!-- Button text to show user Video Settings screen -->
+    <string name="label_video_settings">视频设置</string>
+    <!-- Title of Video Quality Dialog -->
+    <string name="video_download_quality_title">视频下载质量</string>
+    <!-- Auto Video Quality option -->
+    <string name="auto_recommended_text">自动 (建议的)</string>
+    <!-- 360p Video Quality option -->
+    <string name="video_quality_p360">360p (最小的文件尺寸)</string>
+    <!-- 540p Video Quality option -->
+    <string name="video_quality_p540">540p</string>
+    <!-- 720p Video Quality option -->
+    <string name="video_quality_p720">720p (最好质量)</string>
+    <!-- Message shows in Video Quality dialog -->
+    <string name="video_download_quality_message">这个设置是关于如何在{platform_name} app中下载视频的。</string>
+
     <!-- Label for the Download to sd-card setting -->
     <string name="settings_download_to_sdcard_title">下载视频到SD卡</string>
     <!-- Label explaining the download location setting in detail -->
@@ -16,6 +31,9 @@
     <string name="error_download_failed">下载失败</string>
     <!-- Confirmation message shown when attempting to download a large quantity of video data -->
     <string name="file_size_exceeded">下载内容超出设备可用存储空间</string>
+    <!-- Confirmation message shown when attempting to download a large quantity of video data -->
+    <string name="download_exceed_message">您选择的视频大小超过 1GB。
+        您是否希望下载这些视频？</string>
 
     <!-- Message shown when user attempts to download a video over cellular data,
     but has chosen to only allow video downloads over wifi -->
@@ -35,5 +53,14 @@
     <!-- Info message text for to let use know how many videos were deleted -->
     <plurals name="delete_video_snackbar_msg">
         <item quantity="other">已删除%s个视频</item>
+    </plurals>
+
+    <!-- Subtitle labels for video durations in hours-->
+    <plurals name="video_duration_hour">
+        <item quantity="other">%d 小时</item>
+    </plurals>
+    <!-- Subtitle labels for video durations in minutes-->
+    <plurals name="video_duration_minutes">
+        <item quantity="other">%d 分钟</item>
     </plurals>
 </resources>
